fix: DragOver Report Label Captions should show Translations #408

--- a/test-app/Xliff-test/Translations/Al.g.xlf
+++ b/test-app/Xliff-test/Translations/Al.g.xlf
@@ -678,6 +678,16 @@
           <note from="Developer" annotates="general" priority="2"></note>
           <note from="Xliff Generator" annotates="general" priority="3">Page Test Customer Api - Control name - Property Caption</note>
         </trans-unit>
+        <trans-unit id="Report 3299470792 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve">
+          <source>Consistency Check for Active</source>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">Report NAB Report With Labels - Property Caption</note>
+        </trans-unit>
+        <trans-unit id="Report 3299470792 - ReportLabel 1895768393" size-unit="char" translate="yes" xml:space="preserve">
+          <source>Source Table</source>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">Report NAB Report With Labels - ReportLabel SourceLbl</note>
+        </trans-unit>
         <trans-unit id="Report 529985455 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve">
           <source>Report</source>
           <note from="Developer" annotates="general" priority="2"></note>
